--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -230,7 +230,7 @@ $font-weights: (
 @layer components {
   /* TOPBAR */
   .topbar {
-    @apply bg-primary flex items-center w-full h-11 xs:h-15 sm:h-16;
+    @apply bg-primary-dark flex items-center w-full h-11 xs:h-15 sm:h-16;
 
     &-link {
       @apply w-44 md:w-48 h-full border-b-4 border-transparent hover:border-b-white dark:hover:border-gray-300 flex items-center justify-center px-0.125;
