--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -280,7 +280,7 @@ $font-weights: (
   }
 
   .footer-list {
-    @apply grid gap-x-2 [grid-template-rows:repeat(4,auto)] [grid-template-columns:repeat(2,1fr)] [column-count:2] pb-2 md:gap-x-4 md:[grid-template-rows:repeat(3,auto)] md:[grid-template-columns:repeat(3,1fr)] md:[column-count:3] lg:[grid-template-columns:repeat(4,1fr)] lg:[column-count:4];
+    @apply grid gap-x-2 [grid-template-rows:repeat(3,auto)] [grid-template-columns:repeat(2,1fr)] [column-count:2] pb-2 md:gap-x-4 md:[grid-template-rows:repeat(3,auto)] md:[grid-template-columns:repeat(3,1fr)] md:[column-count:3] lg:[grid-template-columns:repeat(4,1fr)] lg:[column-count:4];
 
     &-item {
       @apply py-2;
@@ -632,12 +632,16 @@ $font-weights: (
   .mostread-news-list {
     @apply grid gap-2 grid-flow-col grid-rows-5;
 
+    &-item {
+      @apply flex items-center;
+    }
+
     &-link {
-      @apply flex items-center gap-4;
+      @apply flex items-center gap-2 md:gap-4 h-full;
 
       .news-counter,
       .news-title {
-        @apply inline-block;
+        @apply block;
       }
 
       .news-counter {
