OtherNews Grid Column Updated For Tablet

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -506,7 +506,7 @@ $font-weights: (
   }
 
   .others-news-list {
-    @apply grid ss:grid-cols-2 gap-4 mb-10 md:grid-cols-3 lg:grid-cols-4;
+    @apply grid ss:grid-cols-2 gap-4 mb-10 lg:grid-cols-4;
 
     &-item {
       @apply max-sm:row-span-1 max-sm:col-span-2 pt-2;
