--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -33,6 +33,7 @@
     overflow-y: scroll;
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
+    -webkit-scroll-snap-type: y mandatory;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
